# backend-traning-2024-1

./: Makefile  README.md  docker-compose.yaml
aws-timestream/: .env.exemple  Cargo.toml
aws-timestream/src/: main.rs
device-simulator/: .env  .eslintrc.json  Dockerfile  package.json  tsconfig.json
device-simulator/src/: main.ts
device-simulator/src/infra/: humidity_random_generator.ts  logger.ts  messaging.ts  temp_random_generator.ts
device-simulator/src/services/: humidity.ts  interfaces.ts  temp.ts
grpc/: Cargo.toml
grpc/protos/: server.proto
grpc/src/: main.rs
my-first-rust/: Cargo.toml
my-first-rust/src/: main.rs
rmq-bridge/: .env  Cargo.toml  Dockerfile
rmq-bridge/src/: main.rs
rmq-bridge/src/infra/: mod.rs  mqtt_messaging.rs  rmq_messaging.rs
rmq-bridge/src/services/: messages.rs  service.rs
rmq-consumer/: Cargo.toml
rmq-consumer/src/: main.rs
